# datasetpipeline

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: cli.py  job.py  sample_job.py
app/analyzer/: quality.py
app/dedup/: semantic.py
app/format/: conv_text.py  sft.py
app/helpers/: call_openai.py  embeddings.py  utils.py
app/loader/: local_file.py
app/saver/: local.py
app/translators/: translator.py
jobs/: aeroboros-conv.yml  config.yml  data-centric-ml-sft.yml
scripts/: pin_deps_from_lock.py  publish.py
