[project]
name = "datasetpipeline"
version = "0.2.1"
description = "A data processing and analysis pipeline designed to handle various jobs related to data transformation, quality assessment, deduplication, and formatting. The pipeline can be configured and executed using YAML configuration files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Subhayu Kumar Bala", email = "balasubhayu99@gmail.com" },
]
maintainers = [
    { name = "Subhayu Kumar Bala", email = "balasubhayu99@gmail.com" },
]
license = {text = "MIT"}
keywords = ["dataset", "pipeline", "ml", "data-processing", "deduplication", "quality-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "datasets==3.6.0",
    "pandas==2.2.3",
    "openai==1.82.0",
    "retry==0.9.2",
    "fuzzywuzzy==0.18.0",
    "python-levenshtein==0.27.1",
    "pydantic==2.11.5",
    "typer==0.15.4",
    "rich==14.0.0",
    "loguru==0.7.3",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "sqlalchemy==2.0.41",
    "ruamel.yaml",
    # Lightweight embeddings dependencies (always available)
    "onnxruntime==1.22.0",
    "huggingface-hub==0.32.0",
    "numpy==2.2.6",
    # FAISS is needed for semantic deduplication regardless of embedding mode
    "faiss-cpu==1.11.0",
]

[project.urls]
Homepage = "https://github.com/subhayu99/datasetpipeline"
Documentation = "https://github.com/subhayu99/datasetpipeline#readme"
Repository = "https://github.com/subhayu99/datasetpipeline"
"Bug Tracker" = "https://github.com/subhayu99/datasetpipeline/issues"

# CLI entry points - works with both pip install and uv tool
[project.scripts]
datasetpipeline = "app.cli:main"
dsp = "app.cli:main"  # Short alias

[project.optional-dependencies]
# Full embeddings support with HuggingFace transformers
full = [
    "langchain-community==0.3.24",
    "sentence-transformers==4.1.0",
    "torch==2.7.0",
    "transformers==4.52.3",   # Added - required for HuggingFaceEmbeddings
]

# Development dependencies
dev = [
    "ipykernel==6.29.5",
    "tabulate==0.9.0",
    "pytest==8.3.5",           # Added for testing
    "pytest-cov==6.1.1",       # Added for coverage
    "black==25.1.0",           # Added for code formatting
    "flake8==7.2.0",           # Added for linting
    "mypy==1.15.0",            # Added for type checking
    "twine==6.1.0",            # Added for publishing
    "build==1.2.2.post1",      # Added for building
]

# GPU support (optional)
gpu = [
    "faiss-gpu==1.7.2",        # GPU-accelerated FAISS
    "torch[cuda]==2.7.0",      # CUDA support for PyTorch
]

# All optional dependencies combined
all = [
    "langchain-community==0.3.24",
    "sentence-transformers==4.1.0",
    "torch==2.7.0",
    "transformers==4.52.3",
    "faiss-gpu==1.7.2",
]

[dependency-groups]
# Keep dev group for compatibility, but recommend using optional-dependencies
dev = [
    "ipykernel",
    "tabulate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure Hatchling to include the app directory
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
